- Added Grey grid to Modalview Image BG - fixed content of modalview and resized and repositioned them again - Made transparent button on sidemenu visible on lightmode and changed from white button to grey grid button

--- a/frontend/src/components/ImageModal.css
+++ b/frontend/src/components/ImageModal.css
@@ -67,6 +67,32 @@ canvas {
     height: auto;
 }
 
+.color-options {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.color-options button,
+.color-options input {
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    transition: background-color 0.3s;
+    font-size: 0.9em;
+}
+
+.color-options input[type="color"] {
+    margin-left: 5px;
+}
+
+.color-options button:hover,
+.color-options input:hover {
+    background-color: #f0f0f0;
+}
+
 .traits-section {
     margin-bottom: 5px;
     width: 100%;
@@ -101,16 +127,15 @@ canvas {
 }
 
 .save-button {
-    width: 100%;
-    padding: 10px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: var(--modal-background-color);
     color: var(--modal-text-color);
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
-    margin-top: 5px;
-    font-size: 1em;
+    font-size: 0.9em;
+    margin-left: 5px;
 }
 
 .save-button:hover {
